--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,11 @@
 .menu--filtre--categorie {
 	display: flex;
 	align-items: center;
+	position: relative;
+	margin-right: 20px;
+}
+.menu--filtre--categorie:not(:last-child) {
+	margin-right: 20px;
 }
 
 .menu--deux-filtres{
@@ -140,16 +145,16 @@
 	border-radius: 50%;
 	color: var(--bleu-fonce);
 	background-color: var(--bleu-clair);
-	padding: 17px;
+	padding: 18px;
 	font-size: 17px;
+	position: absolute;
+	left: -2px;
 	z-index: 4;
 }
 
 .menu--filtre--categorie p {
-	position: relative;
-	right: 45px;
 	z-index: 3;
-	padding: 17px 15px 17px 56px;
+	padding: 17px 25px 17px 65px;
 	font-weight: 600;
 	font-size: 17px;
 	border-radius: 25px;
@@ -580,6 +585,7 @@
 		flex-direction: column;
 		align-items: center;
 		justify-content: space-around;
+		margin: 0;
 	}
 
 	.header--logo {
@@ -594,15 +600,18 @@
 	}
 
 	.header--nav li{
-		padding: 0 21% 3% 21%;
-		border-bottom: transparent 4px solid;
+		width: 50%;
+		text-align: center;
+		padding-bottom: 8px;
+		border-bottom: transparent solid 4px;
+		
 	}
 
 	.header--nav a {
 		text-decoration: none;
 		color: black;
-		padding: 0;
 		border: none;
+		padding: 0;
 	}
 
 	.header--nav li:hover{
@@ -654,6 +663,9 @@
 		width: 300px;
 	}
 
+	.menu--filtre--categorie p{
+		font-size: 15px;
+	}
 
 		/* location populaire */
 	.location--populaire{
